Ajout de "vol. " lors de l'affichage d'un numéro de volume d'une publication
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/li_gest_publications/trunk@21188 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/li_gest_publications/ChangeLog
+++ b/li_gest_publications/ChangeLog
@@ -1,3 +1,7 @@
+2009-06-10 Bruno Gallet  <gallet.bruno@gmail.com>
+
+	* Ajout de "vol. " lors de l'affichage d'un numéro de volume d'une publication
+
 2009-06-01 Bruno Gallet  <gallet.bruno@gmail.com>
 
 	* Correction dans la gestion de l'option "Tous" pour le multilangues
